# crowdfund

./: .gitignore  Cargo.toml  Readme.md  index.html
.sqlx/: query-242f45f07621c0f45e1a9dac722e3cf09d84ff0c2f969b66468d970cb0444f70.json  query-649cce2e1033c7c6ac090a5132cc79079b3378b79c83360bbb253edddfa77afe.json  query-ed1c30de04a5f041ac4f938a23c3d765b55f06e66075ecc7924419914f6a09e4.json  query-f6054c9f2be61ec870f99eccb491a65a758c52bda2f3c4db906b9d4e2494989c.json
frontend/: dashboard.html  index.html  landing.html  login.html  profile.html
frontend/routes/: login.html
migrations/: 20250606105659_schema.sql
src/: config.rs  error.rs  main.rs  routes.rs
src/auth/: google_oauth.rs  mod.rs  oauth.rs  session.rs
src/handlers/: auth_handlers.rs  dashboard_handlers.rs  home_handlers.rs  mod.rs  user_handlers.rs
src/models/: mod.rs  user.rs
