[package]
name = "crowdfundd"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "macros", "chrono", "mysql"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
axum-extra = { version = "0.9", features = ["cookie-private"] }
tera = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
rand = "0.8"
lazy_static = "1.4"
mysql_async = "0.31"
chrono = { version = "0.4", features = ["serde"] }
